--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13089,6 +13089,9 @@ div#notebook {
 <li><a href="./Fall2022/ah677_jjn48_tlc234/index.html">Musical chord identifier</a> (<a href="https://www.youtube.com/watch?v=JIY8UpBPMSs&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=7">video demonstration</a>)</li>
 <li><a href="./Fall2022/amf349_ahk86_agh93/index.html">Simulating the Microlife, Macrolife, and the Galaxy</a> (<a href="https://www.youtube.com/watch?v=vJPbM3p8Gx0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=10">video demonstration</a>)</li>
 <li><a href="./Fall2022/bat66_cys37_rjw252/index.html">Audio spatializer</a> (<a href="https://www.youtube.com/watch?v=UIxs1jhvUh0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=30">video demonstration</a>)</li>
+<li><a href="./Fall2022/bm586_snh44/index.html">RPiano: a playable MIDI synthesizer</a> (<a href="https://www.youtube.com/watch?v=z0CkNf_g0mQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=5">video demonstration</a>)</li>
+<li><a href="./Fall2022/cwf54_nr346_keb282/index.html">Jambot</a> (<a href="https://www.youtube.com/watch?v=kAoxX1GrPYs&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=24">video demonstration</a>)</li>
+<li><a href="./Fall2022/eds228_bb584/index.html">Home alert center</a> (<a href="https://www.youtube.com/watch?v=KFigU0svLKo&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=12">video demonstration</a>)</li>
 </ul>
 
 </div>
