--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13092,6 +13092,7 @@ div#notebook {
 <li><a href="./Fall2022/bm586_snh44/index.html">RPiano: a playable MIDI synthesizer</a> (<a href="https://www.youtube.com/watch?v=z0CkNf_g0mQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=5">video demonstration</a>)</li>
 <li><a href="./Fall2022/cwf54_nr346_keb282/index.html">Jambot</a> (<a href="https://www.youtube.com/watch?v=kAoxX1GrPYs&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=24">video demonstration</a>)</li>
 <li><a href="./Fall2022/eds228_bb584/index.html">Home alert center</a> (<a href="https://www.youtube.com/watch?v=KFigU0svLKo&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=12">video demonstration</a>)</li>
+<li><a href="./Fall2022/das538_eqy2_yd395/index.html">Guppy hunters</a> (<a href="https://www.youtube.com/watch?v=6gdv40kquKY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=26">video demonstration</a>)</li>
 </ul>
 
 </div>
