--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13093,6 +13093,8 @@ div#notebook {
 <li><a href="./Fall2022/cwf54_nr346_keb282/index.html">Jambot</a> (<a href="https://www.youtube.com/watch?v=kAoxX1GrPYs&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=24">video demonstration</a>)</li>
 <li><a href="./Fall2022/eds228_bb584/index.html">Home alert center</a> (<a href="https://www.youtube.com/watch?v=KFigU0svLKo&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=12">video demonstration</a>)</li>
 <li><a href="./Fall2022/das538_eqy2_yd395/index.html">Guppy hunters</a> (<a href="https://www.youtube.com/watch?v=6gdv40kquKY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=26">video demonstration</a>)</li>
+<li><a href="./Fall2022/rsb359_ljg227_sk2446/index.html">A whale of a time</a> (<a href="https://www.youtube.com/watch?v=SYovWosy5Rc&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=9">video demonstration</a>)</li>
+<li><a href="./Fall2022/hh543_yz483_mkm249/Final.html">License plate recognition system</a> (<a href="https://www.youtube.com/watch?v=Hld6fX8YYls&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=22">video demonstration</a>)</li>
 </ul>
 
 </div>
