--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13095,6 +13095,8 @@ div#notebook {
 <li><a href="./Fall2022/das538_eqy2_yd395/index.html">Guppy hunters</a> (<a href="https://www.youtube.com/watch?v=6gdv40kquKY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=26">video demonstration</a>)</li>
 <li><a href="./Fall2022/rsb359_ljg227_sk2446/index.html">A whale of a time</a> (<a href="https://www.youtube.com/watch?v=SYovWosy5Rc&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=9">video demonstration</a>)</li>
 <li><a href="./Fall2022/hh543_yz483_mkm249/Final.html">License plate recognition system</a> (<a href="https://www.youtube.com/watch?v=Hld6fX8YYls&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=22">video demonstration</a>)</li>
+<li><a href="./Fall2022/jwl266_cds258_rat83/index.html">MIDI file generation from microphone input</a> (<a href="https://www.youtube.com/watch?v=c4soAzSzYtE&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=37">video demonstration</a>)</li>
+<li><a href="./Fall2022/ljk74_jwf224/index.html">Auto-targeting Nerf gun</a> (<a href="https://www.youtube.com/watch?v=sDSVvzvK2oA&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=31">video demonstration</a>)</li>
 </ul>
 
 </div>
