--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13097,6 +13097,7 @@ div#notebook {
 <li><a href="./Fall2022/hh543_yz483_mkm249/Final.html">License plate recognition system</a> (<a href="https://www.youtube.com/watch?v=Hld6fX8YYls&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=22">video demonstration</a>)</li>
 <li><a href="./Fall2022/jwl266_cds258_rat83/index.html">MIDI file generation from microphone input</a> (<a href="https://www.youtube.com/watch?v=c4soAzSzYtE&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=37">video demonstration</a>)</li>
 <li><a href="./Fall2022/ljk74_jwf224/index.html">Auto-targeting Nerf gun</a> (<a href="https://www.youtube.com/watch?v=sDSVvzvK2oA&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=31">video demonstration</a>)</li>
+<li><a href="./Fall2022/sl2625_txp2_pr376/index.html">Miniature gaming console</a> (<a href="https://www.youtube.com/watch?v=6Zwx40LGK5g&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=14">video demonstration</a>)</li>
 </ul>
 
 </div>
