--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13098,6 +13098,8 @@ div#notebook {
 <li><a href="./Fall2022/jwl266_cds258_rat83/index.html">MIDI file generation from microphone input</a> (<a href="https://www.youtube.com/watch?v=c4soAzSzYtE&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=37">video demonstration</a>)</li>
 <li><a href="./Fall2022/ljk74_jwf224/index.html">Auto-targeting Nerf gun</a> (<a href="https://www.youtube.com/watch?v=sDSVvzvK2oA&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=31">video demonstration</a>)</li>
 <li><a href="./Fall2022/sl2625_txp2_pr376/index.html">Miniature gaming console</a> (<a href="https://www.youtube.com/watch?v=6Zwx40LGK5g&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=14">video demonstration</a>)</li>
+<li><a href="./Fall2022/zh338_zp74/index.html">Crowd City on Pico</a> (<a href="https://www.youtube.com/watch?v=m4_iMseZTsA&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=38">video demonstration</a>)</li>
+<li><a href="./Fall2022/zw543_yz2979_hft9/Main.html">Animatronic hand</a> (<a href="https://www.youtube.com/watch?v=VCVm2Jst4cQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=11">video demonstration</a>)</li>
 </ul>
 
 </div>
