--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13100,6 +13100,8 @@ div#notebook {
 <li><a href="./Fall2022/sl2625_txp2_pr376/index.html">Miniature gaming console</a> (<a href="https://www.youtube.com/watch?v=6Zwx40LGK5g&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=14">video demonstration</a>)</li>
 <li><a href="./Fall2022/zh338_zp74/index.html">Crowd City on Pico</a> (<a href="https://www.youtube.com/watch?v=m4_iMseZTsA&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=38">video demonstration</a>)</li>
 <li><a href="./Fall2022/zw543_yz2979_hft9/Main.html">Animatronic hand</a> (<a href="https://www.youtube.com/watch?v=VCVm2Jst4cQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=11">video demonstration</a>)</li>
+<li><a href="./Fall2022/zw652_zl599_xl767/index.html">West slope landscapes</a> (<a href="https://www.youtube.com/watch?v=ay5PIP1Ork0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=20&amp;t=162s">video demonstration</a>)</li>
+<li><a href="./Fall2022/zmc6_kmm477_hwm44/index.html">The self-playing xylophone</a> (<a href="https://www.youtube.com/watch?v=wW3F7tXd-qc&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=3">video demonstration</a>)</li>
 </ul>
 
 </div>
