--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13102,6 +13102,8 @@ div#notebook {
 <li><a href="./Fall2022/zw543_yz2979_hft9/Main.html">Animatronic hand</a> (<a href="https://www.youtube.com/watch?v=VCVm2Jst4cQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=11">video demonstration</a>)</li>
 <li><a href="./Fall2022/zw652_zl599_xl767/index.html">West slope landscapes</a> (<a href="https://www.youtube.com/watch?v=ay5PIP1Ork0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=20&amp;t=162s">video demonstration</a>)</li>
 <li><a href="./Fall2022/zmc6_kmm477_hwm44/index.html">The self-playing xylophone</a> (<a href="https://www.youtube.com/watch?v=wW3F7tXd-qc&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=3">video demonstration</a>)</li>
+<li><a href="./Fall2022/yw2464_yc2443/ECE5730_Final_Website.html">Shepherding game</a> (<a href="https://www.youtube.com/watch?v=TYmZ8rEDta4&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=19">video demonstration</a>)</li>
+<li><a href="./Fall2022/yp284_yl2237/index.html">Dancing LED cube</a> (<a href="https://www.youtube.com/watch?v=3-YB7K_gST4&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=25">video demonstration</a>)</li>
 </ul>
 
 </div>
