--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13104,6 +13104,8 @@ div#notebook {
 <li><a href="./Fall2022/zmc6_kmm477_hwm44/index.html">The self-playing xylophone</a> (<a href="https://www.youtube.com/watch?v=wW3F7tXd-qc&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=3">video demonstration</a>)</li>
 <li><a href="./Fall2022/yw2464_yc2443/ECE5730_Final_Website.html">Shepherding game</a> (<a href="https://www.youtube.com/watch?v=TYmZ8rEDta4&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=19">video demonstration</a>)</li>
 <li><a href="./Fall2022/yp284_yl2237/index.html">Dancing LED cube</a> (<a href="https://www.youtube.com/watch?v=3-YB7K_gST4&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=25">video demonstration</a>)</li>
+<li><a href="./Fall2022/yc938_srg293/index.html">PicoBoi: a handheld gaming device with GPS</a> (<a href="https://www.youtube.com/watch?v=nFhp6VsxkS8&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=15">video demonstration</a>)</li>
+<li><a href="./Fall2022/ww474_yy796_yw2359/web.html">Water particle system animation</a> (<a href="https://www.youtube.com/watch?v=SucYXxlCSMo&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=6">video demonstration</a>)</li>
 </ul>
 
 </div>
