--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13108,6 +13108,9 @@ div#notebook {
 <li><a href="./Fall2022/ww474_yy796_yw2359/web.html">Water particle system animation</a> (<a href="https://www.youtube.com/watch?v=SucYXxlCSMo&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=6">video demonstration</a>)</li>
 <li><a href="./Fall2022/tl482_yy389_zy278/index.html">Trash dog</a> (<a href="https://www.youtube.com/watch?v=kw4lOBDWQUU&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=21">video demonstration</a>)</li>
 <li><a href="./Fall2022/tc575_rm722_raf269/index.html">Digital audio synthesizer</a> (<a href="https://www.youtube.com/watch?v=5SnrapigcxA&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=18&amp;t=351s">video demonstration</a>)</li>
+<li><a href="./Fall2022/iaa34_swy6_nrb74/index.html">Playing Minecraft with a recorder</a> (<a href="https://www.youtube.com/watch?v=GOPVmcFCy80&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=13&amp;t=171s">video demonstration</a>)</li>
+<li><a href="./Fall2022/jfd232_oe36_psp43/index.html">Retro snake game</a> (<a href="https://www.youtube.com/watch?v=fWTaJtt8cF0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=35">video demonstration</a>)</li>
+<li><a href="./Fall2022/mk2592_yw575_asx3/index.html">Spatial audio murder mystery</a> (<a href="https://www.youtube.com/watch?v=p_wtaCNrdgE&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=4">video demonstration</a>)</li>
 </ul>
 
 </div>
