--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13085,6 +13085,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Fall,-2022">Fall, 2022<a class="anchor-link" href="#Fall,-2022">&#182;</a></h3><ul>
+<li><a href="./Fall2022/mmc323-jah569-rm857/index.html">Persistence of vision LED display</a> (<a href="https://www.youtube.com/watch?v=vRa5mGe45jk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=1">video demonstration</a>)</li>
 <li><a href="./Fall2022/afp65_mib57_ens57/index.html">Handwriting recognition</a> (<a href="https://www.youtube.com/watch?v=teCES6Atgzo&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=39">video demonstration</a>)</li>
 <li><a href="./Fall2022/ah677_jjn48_tlc234/index.html">Musical chord identifier</a> (<a href="https://www.youtube.com/watch?v=JIY8UpBPMSs&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=7">video demonstration</a>)</li>
 <li><a href="./Fall2022/amf349_ahk86_agh93/index.html">Simulating the Microlife, Macrolife, and the Galaxy</a> (<a href="https://www.youtube.com/watch?v=vJPbM3p8Gx0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=10">video demonstration</a>)</li>
@@ -13111,6 +13112,7 @@ div#notebook {
 <li><a href="./Fall2022/iaa34_swy6_nrb74/index.html">Playing Minecraft with a recorder</a> (<a href="https://www.youtube.com/watch?v=GOPVmcFCy80&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=13&amp;t=171s">video demonstration</a>)</li>
 <li><a href="./Fall2022/jfd232_oe36_psp43/index.html">Retro snake game</a> (<a href="https://www.youtube.com/watch?v=fWTaJtt8cF0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=35">video demonstration</a>)</li>
 <li><a href="./Fall2022/mk2592_yw575_asx3/index.html">Spatial audio murder mystery</a> (<a href="https://www.youtube.com/watch?v=p_wtaCNrdgE&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=4">video demonstration</a>)</li>
+<li><a href="./Fall2022/jro79_aoa34/index.html">First person shooter aimbot</a> (<a href="https://www.youtube.com/watch?v=QVEiPR61y5Q&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=17">video demonstration</a>)</li>
 </ul>
 
 </div>
