--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13086,6 +13086,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Fall,-2022">Fall, 2022<a class="anchor-link" href="#Fall,-2022">&#182;</a></h3><ul>
 <li><a href="./Fall2022/mmc323-jah569-rm857/index.html">Persistence of vision LED display</a> (<a href="https://www.youtube.com/watch?v=vRa5mGe45jk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=1">video demonstration</a>)</li>
+<li><a href="./Fall2022/tg382_kaf245/index.html">Recreating the Red Light Green Light doll from Squid Games</a> (<a href="https://www.youtube.com/watch?v=qmjJvgB3ehk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=23">video demonstration</a>)</li>
 <li><a href="./Fall2022/afp65_mib57_ens57/index.html">Handwriting recognition</a> (<a href="https://www.youtube.com/watch?v=teCES6Atgzo&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=39">video demonstration</a>)</li>
 <li><a href="./Fall2022/ah677_jjn48_tlc234/index.html">Musical chord identifier</a> (<a href="https://www.youtube.com/watch?v=JIY8UpBPMSs&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=7">video demonstration</a>)</li>
 <li><a href="./Fall2022/amf349_ahk86_agh93/index.html">Simulating the Microlife, Macrolife, and the Galaxy</a> (<a href="https://www.youtube.com/watch?v=vJPbM3p8Gx0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=10">video demonstration</a>)</li>
