--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13117,6 +13117,9 @@ div#notebook {
 <li><a href="./Fall2022/ocl6_lms445/index.html">Universal infrared remote control</a> (<a href="https://www.youtube.com/watch?v=OaMCaecrE4o&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=32">video demonstration</a>)</li>
 <li><a href="./Fall2022/vk262_mse63/index.html">Microphone-based rhythm game</a> (<a href="https://www.youtube.com/watch?v=AlHCsWHzeps&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=16">video demonstration</a>)</li>
 <li><a href="./Fall2022/tts47_ems395_mck65/index.html">The Saga of Steve (a Zelda-inspired video game)</a> (<a href="https://www.youtube.com/watch?v=4r80cfx1C0o&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=2">video demonstration</a>)</li>
+<li><a href="./Fall2022/zl348_ch682/index.html">Arcade game console</a> (<a href="https://www.youtube.com/watch?v=4Kxxq7x7Mew&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=34">video demonstration</a>)</li>
+<li><a href="./Fall2022/tms279_zdh5_adf64/index.html">Voice controlled machine learning</a> (<a href="https://www.youtube.com/watch?v=UYZzhFrJK5I&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=36&amp;t=119s">video demonstration</a>)</li>
+<li><a href="./Fall2022/sko35_ns594_kg543/index.html">Mario-Kart inspired racing game</a> (<a href="https://www.youtube.com/watch?v=Ji4j_eniWiQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=27&amp;t=2s">video demonstration</a>)</li>
 </ul>
 
 </div>
