--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13077,7 +13077,24 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Final-projects-for-ECE-4760/5730">Final projects for ECE 4760/5730<a class="anchor-link" href="#Final-projects-for-ECE-4760/5730">&#182;</a></h1><h4 id="(IN-PROGRESS)---still-adding-student-projects-and-other-links">(IN PROGRESS) - still adding student projects and other links<a class="anchor-link" href="#(IN-PROGRESS)---still-adding-student-projects-and-other-links">&#182;</a></h4>
+<h1 id="Final-projects-for-ECE-4760/5730">Final projects for <a href="https://ece4760.github.io">ECE 4760/5730</a><a class="anchor-link" href="#Final-projects-for-ECE-4760/5730">&#182;</a></h1><p>This webpage links student-generated webpages describing their final projects for <a href="https://ece4760.github.io">ECE 4760/5730</a> at Cornell University.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="YouTube-playlist-of-RP2040-student-final-projects">YouTube playlist of RP2040 student final projects<a class="anchor-link" href="#YouTube-playlist-of-RP2040-student-final-projects">&#182;</a></h3><p>Please find a link to the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7">here</a>. It is also embedded below.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </div>
 </div>
@@ -13122,6 +13139,14 @@ div#notebook {
 <li><a href="./Fall2022/sko35_ns594_kg543/index.html">Mario-Kart inspired racing game</a> (<a href="https://www.youtube.com/watch?v=Ji4j_eniWiQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=27&amp;t=2s">video demonstration</a>)</li>
 <li><a href="./Fall2022/lsg84/start.html">Dino jump video game</a> (<a href="https://www.youtube.com/watch?v=tM95_JEBvyA&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=29">video demonstration</a>)</li>
 </ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="1999---2021">1999 - 2021<a class="anchor-link" href="#1999---2021">&#182;</a></h3><p>Please see <a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/">this webpage</a> for ECE 4760 student final projects from 1999-2021.</p>
 
 </div>
 </div>
