--- a/index.html
+++ b/index.html
@@ -13180,6 +13180,7 @@ div#notebook {
 </ul>
 <h4 id="Applications-and-projects">Applications and projects<a class="anchor-link" href="#Applications-and-projects">&#182;</a></h4><blockquote><p><strong>Hunter (RP2040)</strong></p>
 <ul>
+<li><a href="https://vanhunteradams.com/Pico/Ethernet/UPD_TX.html">UDP ethernet transmitter implemented with PIO on RP2040</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Steppers/Lorenz.html">Stepper motor driver for RP2040</a></li>
 <li><a href="https://vanhunteradams.com/Pico/VGA/VGA.html">VGA driver for RP2040 (+Mandelbrot, Barnsley, Game of Life)</a></li>
 <li><a href="https://vanhunteradams.com/Pico/VGA/FFT.html">Audio FFT to VGA on RP2040</a></li>
