--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13138,6 +13138,7 @@ div#notebook {
 <li><a href="./Fall2022/tms279_zdh5_adf64/index.html">Voice controlled machine learning</a> (<a href="https://www.youtube.com/watch?v=UYZzhFrJK5I&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=36&amp;t=119s">video demonstration</a>)</li>
 <li><a href="./Fall2022/sko35_ns594_kg543/index.html">Mario-Kart inspired racing game</a> (<a href="https://www.youtube.com/watch?v=Ji4j_eniWiQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=27&amp;t=2s">video demonstration</a>)</li>
 <li><a href="./Fall2022/lsg84/start.html">Dino jump video game</a> (<a href="https://www.youtube.com/watch?v=tM95_JEBvyA&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=29">video demonstration</a>)</li>
+<li><a href="./Fall2022/yj253_lh494_cz236/index.html">Glove-controlled robot hand</a> (<a href="https://www.youtube.com/watch?v=G2LN8rhvrco&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=33">video demonstration</a>)</li>
 </ul>
 
 </div>
