--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13140,6 +13140,7 @@ div#notebook {
 <li><a href="./Fall2022/lsg84/start.html">Dino jump video game</a> (<a href="https://www.youtube.com/watch?v=tM95_JEBvyA&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=29">video demonstration</a>)</li>
 <li><a href="./Fall2022/spd75_cea57/index.html">Syyynth hero rhythm game</a> (<a href="https://www.youtube.com/watch?v=SYxIqJ6wqH0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=8">video demonstration</a>)</li>
 <li><a href="./Fall2022/yj253_lh494_cz236/index.html">Glove-controlled robot hand</a> (<a href="https://www.youtube.com/watch?v=G2LN8rhvrco&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=33">video demonstration</a>)</li>
+<li><a href="./Fall2022/emg229_cc2698_jcp327/FinalReport.html">Tetris on RP2040</a> (<a href="https://www.youtube.com/watch?v=-ZMKxJcLG8I&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=28">video demonstration</a>)</li>
 </ul>
 
 </div>
