--- a/index.html
+++ b/index.html
@@ -13122,11 +13122,29 @@ div#notebook {
 </ul>
 <h4 id="Metainformation-and-due-dates">Metainformation and due dates<a class="anchor-link" href="#Metainformation-and-due-dates">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Schedule.html">Schedule of due dates</a></li>
-<li><a href="./Projects/Projects.html">Final projects from previous semesters</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Lab_Criteria.html">What makes a good laboratory exercise?</a><!-- - [Lecture slides](https://vanhunteradams.com/Pico/CourseMaterials/Materials.html) -->
 <!-- - [Final project purchase requests](https://docs.google.com/forms/d/e/1FAIpQLSexrqKZjTeqIg24EicYAqRoPZ12Q7x3XGb7fwA8rTuPw7qplw/viewform?usp=sf_link) --></li>
 </ul>
 
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Student-final-project-demonstrations">Student final project demonstrations<a class="anchor-link" href="#Student-final-project-demonstrations">&#182;</a></h2><ul>
+<li>YouTube playlist linked <a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7">here</a> and embedded below.</li>
+<li>Student webpages available <a href="./Projects/Projects.html">here</a></li>
+</ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 </div>
 </div>
