CAN and DMA CPU

--- a/index.html
+++ b/index.html
@@ -13198,6 +13198,7 @@ div#notebook {
 </ul>
 <h4 id="Applications-and-projects">Applications and projects<a class="anchor-link" href="#Applications-and-projects">&#182;</a></h4><blockquote><p><strong>Hunter (RP2040)</strong></p>
 <ul>
+<li><a href="https://vanhunteradams.com/Pico/CAN/CAN.html">CAN driver implemented with PIO on RP2040</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Ethernet/UPD_TX.html">UDP ethernet transmitter implemented with PIO on RP2040</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Steppers/Lorenz.html">Stepper motor driver for RP2040</a></li>
 <li><a href="https://vanhunteradams.com/Pico/VGA/VGA.html">VGA driver for RP2040 (+Mandelbrot, Barnsley, Game of Life)</a></li>
@@ -13210,6 +13211,7 @@ div#notebook {
 </ul>
 <p><strong>Bruce (RP2040)</strong></p>
 <ul>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_DMA_machine/DMA_machine_rp2040.html">DMA computing machine</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_Lattice_Boltzmann/index_LB.html">Lattice-Boltzmann on RP2040</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_Micropython.html">Micropython experimentation on RP2040</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_fixed_pt/index_fixed.html">Fixed point experimentation on RP2040</a></li>
