--- a/index.html
+++ b/index.html
@@ -13190,6 +13190,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Pendulum_construction.html">Mechanical construction of inverted pendulum</a></li>
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Tuning.html">Tuning reaction wheel PID</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Helicopter/MotorCircuit.html">Electrically isolating DC motors</a></li>
+<li><a href="https://vanhunteradams.com/Math/Fourier_drawing/Fourier_Drawing.html">Picasso, by way of Fourier</a></li>
 </ul>
 <h4 id="Communication-protocols">Communication protocols<a class="anchor-link" href="#Communication-protocols">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/Protocols/SPI/SPI.html">SPI communication</a></li>
