added bird and helicopter labs

--- a/index.html
+++ b/index.html
@@ -13115,9 +13115,9 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><h4 id="Lab-exercises,-reading,-and-final-project">Lab exercises, reading, and final project<a class="anchor-link" href="#Lab-exercises,-reading,-and-final-project">&#182;</a></h4><ul>
-<li><a href="https://vanhunteradams.com/Pico/Cricket/Crickets.html"><strong>Lab 1</strong>: Synthesizing and synchronizing snowy tree crickets</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Birds/Birdsong.html"><strong>Lab 1</strong>: Synthesizing birdsong</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Animal_Movement.html"><strong>Lab 2</strong>: Animating leadership and decision-making in animal groups on the move</a></li>
-<li><a href="https://vanhunteradams.com/Pico/ReactionWheel/ReactionWheel.html"><strong>Lab 3</strong>: PID control of an inverted pendulum with a reaction wheel</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Helicopter/Helicopter.html"><strong>Lab 3</strong>: PID control of a 1D helicopter</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Final_Project.html"><strong>Final project</strong>: a 4-week, open-ended design project</a></li>
 </ul>
 <h4 id="Metainformation-and-due-dates">Metainformation and due dates<a class="anchor-link" href="#Metainformation-and-due-dates">&#182;</a></h4><ul>
@@ -13196,6 +13196,10 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Protocols/SPI/SPI.html">SPI communication</a></li>
 <li><a href="https://vanhunteradams.com/Protocols/I2C/I2C.html">I2C communication</a></li>
 <li><a href="https://vanhunteradams.com/Protocols/UART/UART.html">UART communication</a></li>
+</ul>
+<h4 id="Lab-exercises-from-previous-semesters">Lab exercises from previous semesters<a class="anchor-link" href="#Lab-exercises-from-previous-semesters">&#182;</a></h4><ul>
+<li><a href="https://vanhunteradams.com/Pico/Cricket/Crickets.html">Synthesizing and synchronizing snowy tree crickets</a></li>
+<li><a href="https://vanhunteradams.com/Pico/ReactionWheel/ReactionWheel.html">PID control of an inverted pendulum with a reaction wheel</a></li>
 </ul>
 <h4 id="Applications-and-projects">Applications and projects<a class="anchor-link" href="#Applications-and-projects">&#182;</a></h4><blockquote><p><strong>Hunter (RP2040)</strong></p>
 <ul>
