--- a/index.html
+++ b/index.html
@@ -13177,6 +13177,7 @@ div#notebook {
 <h4 id="Algorithms-and-techniques">Algorithms and techniques<a class="anchor-link" href="#Algorithms-and-techniques">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/DDS/DDS.html">Direct Digital Synthesis</a></li>
 <li><a href="https://vanhunteradams.com/FixedPoint/FixedPoint.html">Fixed point arithmetic</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Keypad/Keypad.html">Interfacing with a keypad</a></li>
 <li><a href="https://vanhunteradams.com/FFT/FFT.html">Fast Fourier Transforms</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Cricket/Synchronization.html">Synchronization of integrate-and-fire oscillators</a></li>
 <li><a href="https://vanhunteradams.com/Birds-serial/Birdsong_synthesis.html">Synthesizing birdsong</a></li>
