--- a/index.html
+++ b/index.html
@@ -13116,7 +13116,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><h4 id="Lab-exercises,-reading,-and-final-project">Lab exercises, reading, and final project<a class="anchor-link" href="#Lab-exercises,-reading,-and-final-project">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/Pico/Birds/Birdsong.html"><strong>Lab 1</strong>: Synthesizing birdsong</a></li>
-<li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Animal_Movement.html"><strong>Lab 2</strong>: Animating leadership and decision-making in animal groups on the move</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Boids-predator.html"><strong>Lab 2</strong>: Animating murmurations of starlings</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Helicopter/Helicopter.html"><strong>Lab 3</strong>: PID control of a 1D helicopter</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Final_Project.html"><strong>Final project</strong>: a 4-week, open-ended design project</a></li>
 </ul>
@@ -13162,6 +13162,7 @@ div#notebook {
 <h2 id="Links-(these-are-our-&quot;textbook&quot;)">Links (these are our "textbook")<a class="anchor-link" href="#Links-(these-are-our-&quot;textbook&quot;)">&#182;</a></h2><h4 id="Daily-use-links">Daily-use links<a class="anchor-link" href="#Daily-use-links">&#182;</a></h4><ul>
 <li><a href="https://github.com/vha3/Hunter-Adams-RP2040-Demos">Course demo code</a></li>
 <li><a href="https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf">RP2040 datasheet</a></li>
+<li><a href="https://www.raspberrypi.com/documentation/pico-sdk/hardware.html">RP2040 C SDK Hardware APIs</a></li>
 <li><a href="https://datasheets.raspberrypi.com/pico/raspberry-pi-pico-c-sdk.pdf">RP2040 C SDK Guide</a></li>
 <li><a href="https://datasheets.raspberrypi.com/pico/pico-datasheet.pdf">Pi Pico datasheet</a></li>
 </ul>
@@ -13181,6 +13182,8 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/FFT/FFT.html">Fast Fourier Transforms</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Cricket/Synchronization.html">Synchronization of integrate-and-fire oscillators</a></li>
 <li><a href="https://vanhunteradams.com/Birds-serial/Birdsong_synthesis.html">Synthesizing birdsong</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Boids-algorithm.html">Boids, plus distributed consensus</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Boids-predator.html">Boids, plus predator</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Cricket/Cricket_synthesis.html">Synthesizing cricket chirps</a></li>
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Complementary_Filters.html">Complementary filters</a></li>
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Digital_Lowpass_Filters.html">Digital lowpass filters</a></li>
@@ -13189,6 +13192,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Estimation/Estimation.html">Particle filters, sigma-point filters, EKF's, UKF's, KF's</a></li>
 <li><a href="https://vanhunteradams.com/Estimation/Examples.html">Worked estimation examples</a></li>
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Pendulum_construction.html">Mechanical construction of inverted pendulum</a></li>
+<li><a href="https://vanhunteradams.com/DE1/Lattice_Boltzmann/Lattice_Boltzmann.html">Lattice Boltzmann algorithm</a></li>
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Tuning.html">Tuning reaction wheel PID</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Helicopter/MotorCircuit.html">Electrically isolating DC motors</a></li>
 <li><a href="https://vanhunteradams.com/Math/Fourier_drawing/Fourier_Drawing.html">Picasso, by way of Fourier</a></li>
@@ -13199,7 +13203,8 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Protocols/UART/UART.html">UART communication</a></li>
 </ul>
 <h4 id="Lab-exercises-from-previous-semesters">Lab exercises from previous semesters<a class="anchor-link" href="#Lab-exercises-from-previous-semesters">&#182;</a></h4><ul>
-<li><a href="https://vanhunteradams.com/Pico/Cricket/Crickets.html">Synthesizing and synchronizing snowy tree crickets</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Cricket/Crickets.html">Synthesizing and synchronizing snowy tree cricket chirps</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Animal_Movement.html">Animating leadership and decision-making in animal groups on the move</a></li>
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/ReactionWheel.html">PID control of an inverted pendulum with a reaction wheel</a></li>
 </ul>
 <h4 id="Applications-and-projects">Applications and projects<a class="anchor-link" href="#Applications-and-projects">&#182;</a></h4><blockquote><p><strong>Hunter (RP2040)</strong></p>
