--- a/index.html
+++ b/index.html
@@ -13283,6 +13283,7 @@ div#notebook {
 </ul>
 </blockquote>
 </li>
+<li>Course dog: <a href="https://vanhunteradams.com/Pickles/Pickles.png">Pickles</a></li>
 </ul>
 <p><strong>Lecture and lab schedule</strong></p>
 <ul>
