more of bruces links

--- a/index.html
+++ b/index.html
@@ -13230,6 +13230,10 @@ div#notebook {
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_MBED.html">MBED for RP2040 (+steppers, NTSC video, DLA, FFT, Specra)</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_random/index_random.html">Random number generation</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_vga256/index_vga_256.html">8-bit VGA</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_LWIP/UDP_array_send_recv/index_udp_array.html">UDP networking with Pico W</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_LWIP/ntp_rtc_VGA256/index_ntp_vga.html">NTP to RTC</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_LWIP/access_point_server/index_access_pt_version3.html">Web server access point</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_memory/index_memory.html">Interfacing with external memory</a></li>
 </ul>
 <p><strong>Hunter (PIC32)</strong></p>
 <ul>
