--- a/index.html
+++ b/index.html
@@ -13279,11 +13279,10 @@ div#notebook {
 <li><strong>Instructor</strong>: Hunter Adams (<a href="https://www.engineering.cornell.edu/faculty-directory/hunter-adams">Cornell page</a>, <a href="https://vanhunteradams.com">personal website</a>)</li>
 <li>Retired instructor: Bruce Land (<a href="https://people.ece.cornell.edu/land/">website</a>)</li>
 <li>Teaching Assistants<blockquote><ul>
-<li>Stefen Pegels (sgp62)</li>
-<li>Aratrika Ghatak (ag988)</li>
-<li>Tyrone Whitmore-Wilson (tjw234)</li>
-<li>Tyler Bisk (tjb274)</li>
-<li>Marek Chmielewski (mc2255)</li>
+<li>Sarah Ellenbogen (sje57)</li>
+<li>Alex Scotte (ajs667)</li>
+<li>Nikhil Satheesh Pillai (ns594)</li>
+<li>Mahmoud Elsharawy (mse63)</li>
 </ul>
 </blockquote>
 </li>
@@ -13291,14 +13290,14 @@ div#notebook {
 </ul>
 <p><strong>Lecture and lab schedule</strong></p>
 <ul>
-<li>Lectures (Hollister B14): MWF, 12:25-13:15</li>
-<li>Laboratory sections (Phillips 238): MWF, 13:30-16:30 ; W 19:30-22:30</li>
+<li>Lectures (Gates G01): MWF, 12:20-13:10</li>
+<li>Laboratory sections (Phillips 238): MWRF, 13:25-17:25 ; R 8:00-11:00</li>
 <li>Office hours: You may come to any lab section and I'll be there. I'll also schedule some extras each week.</li>
 </ul>
 <p><strong>Lecture recordings</strong></p>
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA5oDg8VXM110GKc-CmvUqEZ">RP2040 lectures</a>: This playlist will be updated with each new lecture.</li>
-<li><a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA6FEJuj94gl-9vw8xcHu9Gp">PIC32 lectures (last year)</a>: A different microcontroller, but many similar concepts</li>
+<li><a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA6FEJuj94gl-9vw8xcHu9Gp">PIC32 lectures (a few years ago)</a>: A different microcontroller, but many similar concepts</li>
 </ul>
 <p><strong>Course policy, grading, and lab report expectations</strong></p>
 <ul>
@@ -13310,7 +13309,7 @@ div#notebook {
 </ul>
 <p><strong>Canvas site</strong></p>
 <ul>
-<li><a href="https://canvas.cornell.edu/courses/44987">Link here</a>: Will be used to turn in all assignments</li>
+<li><a href="https://canvas.cornell.edu/courses/56770">Link here</a>: Will be used to turn in all assignments</li>
 </ul>
 
 </div>
