--- a/index.html
+++ b/index.html
@@ -13122,8 +13122,8 @@ div#notebook {
 </ul>
 <h4 id="Metainformation-and-due-dates">Metainformation and due dates<a class="anchor-link" href="#Metainformation-and-due-dates">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Schedule.html">Schedule of due dates</a></li>
-<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Lab_Criteria.html">What makes a good laboratory exercise?</a><!-- - [Lecture slides](https://vanhunteradams.com/Pico/CourseMaterials/Materials.html) -->
-<!-- - [Final project purchase requests](https://docs.google.com/forms/d/e/1FAIpQLSexrqKZjTeqIg24EicYAqRoPZ12Q7x3XGb7fwA8rTuPw7qplw/viewform?usp=sf_link) --></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Lab_Criteria.html">What makes a good laboratory exercise?</a></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Materials.html">Lecture slides</a><!-- - [Final project purchase requests](https://docs.google.com/forms/d/e/1FAIpQLSexrqKZjTeqIg24EicYAqRoPZ12Q7x3XGb7fwA8rTuPw7qplw/viewform?usp=sf_link) --></li>
 </ul>
 
 </div>
