--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13101,6 +13101,16 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Fall,-2023">Fall, 2023<a class="anchor-link" href="#Fall,-2023">&#182;</a></h3><ul>
+<li><a href="./Fall2023/cdc227_ms2663_vs356/Project%20Introduction.html">Gesture-controlled Game</a> (<a href="https://www.youtube.com/watch?v=eWwDzLKzAFY">video demonstration</a>)</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Fall,-2022">Fall, 2022<a class="anchor-link" href="#Fall,-2022">&#182;</a></h3><ul>
 <li><a href="./Fall2022/mmc323-jah569-rm857/index.html">Persistence of vision LED display</a> (<a href="https://www.youtube.com/watch?v=vRa5mGe45jk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=1">video demonstration</a>)</li>
 <li><a href="./Fall2022/tg382_kaf245/index.html">Recreating the Red Light Green Light doll from Squid Games</a> (<a href="https://www.youtube.com/watch?v=qmjJvgB3ehk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=23">video demonstration</a>)</li>
