--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13103,6 +13103,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Fall,-2023">Fall, 2023<a class="anchor-link" href="#Fall,-2023">&#182;</a></h3><ul>
 <li><a href="./Fall2023/cdc227_ms2663_vs356/Project%20Introduction.html">Gesture-controlled Game</a> (<a href="https://www.youtube.com/watch?v=eWwDzLKzAFY">video demonstration</a>)</li>
+<li><a href="./Fall2023/jnh84_lcd49/jnh84_lcd49.html">Automated hydroponics system</a> (<a href="https://www.youtube.com/watch?v=3DqP95uvAP0">video demonstration</a>)</li>
 </ul>
 
 </div>
