--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13105,6 +13105,7 @@ div#notebook {
 <li><a href="./Fall2023/cdc227_ms2663_vs356/Project%20Introduction.html">Gesture-controlled Game</a> (<a href="https://www.youtube.com/watch?v=eWwDzLKzAFY">video demonstration</a>)</li>
 <li><a href="./Fall2023/jnh84_lcd49/jnh84_lcd49.html">Automated hydroponics system</a> (<a href="https://www.youtube.com/watch?v=3DqP95uvAP0">video demonstration</a>)</li>
 <li><a href="./Fall2023/nnb28_vb269/RPee2040.html">RPee2040</a> (<a href="https://www.youtube.com/watch?v=75KFdw1hYbY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;t=2s">video demonstration</a>)</li>
+<li><a href="./Fall2023/zl823_kg434/index.html">Microwave system for 2D and 3D imaging</a> (<a href="https://www.youtube.com/watch?v=5o7RWTJmXuE">video demonstration</a>)</li>
 </ul>
 
 </div>
