projects six and seven

--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13107,6 +13107,8 @@ div#notebook {
 <li><a href="./Fall2023/nnb28_vb269/RPee2040.html">RPee2040</a> (<a href="https://www.youtube.com/watch?v=75KFdw1hYbY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;t=2s">video demonstration</a>)</li>
 <li><a href="./Fall2023/zl823_kg434/index.html">Microwave system for 2D and 3D imaging</a> (<a href="https://www.youtube.com/watch?v=5o7RWTJmXuE">video demonstration</a>)</li>
 <li><a href="./Fall2023/av458_dht35_gwl45/index.html">Stickman Ninja game</a> (<a href="https://www.youtube.com/watch?v=Lt3ESErPqRE">video demonstration</a>)</li>
+<li><a href="./Fall2023/bg372_jtg239/FinalProjectWebpage.html">Interactive lightsaber</a> (<a href="https://www.youtube.com/watch?v=ZPBNHdnES3U">video demonstration</a>)</li>
+<li><a href="./Fall2023/cy524_sk2794/cy524_sk2794.html">Pico Barrier Blitz</a> (<a href="https://www.youtube.com/watch?v=YBhAH4O5zS0">video demonstration</a>)</li>
 </ul>
 
 </div>
