--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13109,6 +13109,8 @@ div#notebook {
 <li><a href="./Fall2023/av458_dht35_gwl45/index.html">Stickman Ninja game</a> (<a href="https://www.youtube.com/watch?v=Lt3ESErPqRE">video demonstration</a>)</li>
 <li><a href="./Fall2023/bg372_jtg239/FinalProjectWebpage.html">Interactive lightsaber</a> (<a href="https://www.youtube.com/watch?v=ZPBNHdnES3U">video demonstration</a>)</li>
 <li><a href="./Fall2023/cy524_sk2794/cy524_sk2794.html">Pico Barrier Blitz</a> (<a href="https://www.youtube.com/watch?v=YBhAH4O5zS0">video demonstration</a>)</li>
+<li><a href="./Fall2023/hy592_yx623_tl839/index.html">Realtime audio spectrogram analyzer</a> (<a href="https://www.youtube.com/watch?v=C8ed5-WB-MY&amp;t=10s">video demonstration</a>)</li>
+<li><a href="./Fall2023/tic3_mmh257/FinalReport.html">Pond water simulation</a></li>
 </ul>
 
 </div>
