--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13111,6 +13111,8 @@ div#notebook {
 <li><a href="./Fall2023/cy524_sk2794/cy524_sk2794.html">Pico Barrier Blitz</a> (<a href="https://www.youtube.com/watch?v=YBhAH4O5zS0">video demonstration</a>)</li>
 <li><a href="./Fall2023/hy592_yx623_tl839/index.html">Realtime audio spectrogram analyzer</a> (<a href="https://www.youtube.com/watch?v=C8ed5-WB-MY&amp;t=10s">video demonstration</a>)</li>
 <li><a href="./Fall2023/tic3_mmh257/FinalReport.html">Pond water simulation</a></li>
+<li><a href="./Fall2023/wf223_hw768/index.html">Electromagnet robot</a> (<a href="https://www.youtube.com/watch?v=G_COTIjia5Q">video demonstration</a>)</li>
+<li><a href="./Fall2023/yg585_yz2952/yg585_yz2952.html">Autonomous luggage following system</a> (<a href="https://www.youtube.com/watch?v=UMxiqASDjy0">video demonstration</a>)</li>
 </ul>
 
 </div>
