--- a/Projects/Fall2023/yg585_yz2952/yg585_yz2952.html
+++ b/Projects/Fall2023/yg585_yz2952/yg585_yz2952.html
@@ -32,7 +32,7 @@
       Autonomous Luggage Following System</h1>
       <h3>2023 Fall ECE5730 Final Project by Yuqiang Ge (yg585) and Yiyang Zhao (yz2952)</h3>
       <div id="bannerImage">
-      <img src="Assets/images/robot.jpg" alt="">
+      <img src="Assets/images/Robot.jpg" alt="">
       </div>
 	  <div class="video-container">
 	  <h5>Project Video</h5>
