--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13113,6 +13113,8 @@ div#notebook {
 <li><a href="./Fall2023/tic3_mmh257/FinalReport.html">Pond water simulation</a></li>
 <li><a href="./Fall2023/wf223_hw768/index.html">Electromagnet robot</a> (<a href="https://www.youtube.com/watch?v=G_COTIjia5Q">video demonstration</a>)</li>
 <li><a href="./Fall2023/yg585_yz2952/yg585_yz2952.html">Autonomous luggage following system</a> (<a href="https://www.youtube.com/watch?v=UMxiqASDjy0">video demonstration</a>)</li>
+<li><a href="./Fall2023/app67_dtt34/final.html">Audio tracking with soundar</a> (<a href="https://www.youtube.com/watch?v=l8RQH72cvqk">video demonstration</a>)</li>
+<li><a href="./Fall2023/jcs556_sd954_hh759/index.html">Etch-A-Sketch</a> (<a href="https://www.youtube.com/watch?v=LVCq2VqcC4U">video demonstration</a>)</li>
 </ul>
 
 </div>
