--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13116,6 +13116,8 @@ div#notebook {
 <li><a href="./Fall2023/app67_dtt34/final.html">Audio tracking with soundar</a> (<a href="https://www.youtube.com/watch?v=l8RQH72cvqk">video demonstration</a>)</li>
 <li><a href="./Fall2023/jcs556_sd954_hh759/index.html">Etch-A-Sketch</a> (<a href="https://www.youtube.com/watch?v=LVCq2VqcC4U">video demonstration</a>)</li>
 <li><a href="./Fall2023/rg764_sa2236_wc556/report.html">Piano Tiles 2</a> (<a href="https://www.youtube.com/watch?v=_98jwv7Dm7Q">video demonstration</a>)</li>
+<li><a href="./Fall2023/mp2235_cc2535/index.html">Kinetic molecular theory with particles</a> (<a href="https://www.youtube.com/watch?v=LiEpu315REc">video demonstration</a>)</li>
+<li><a href="./Fall2023/dms489_kw462/FinalProjectAtarisPongReimagined.html">ATARI's Pong Reimagined</a> (<a href="https://www.youtube.com/watch?v=Qivx0E62YHA">video demonstration</a>)</li>
 </ul>
 
 </div>
