--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13118,6 +13118,8 @@ div#notebook {
 <li><a href="./Fall2023/rg764_sa2236_wc556/report.html">Piano Tiles 2</a> (<a href="https://www.youtube.com/watch?v=_98jwv7Dm7Q">video demonstration</a>)</li>
 <li><a href="./Fall2023/mp2235_cc2535/index.html">Kinetic molecular theory with particles</a> (<a href="https://www.youtube.com/watch?v=LiEpu315REc">video demonstration</a>)</li>
 <li><a href="./Fall2023/dms489_kw462/FinalProjectAtarisPongReimagined.html">ATARI's Pong Reimagined</a> (<a href="https://www.youtube.com/watch?v=Qivx0E62YHA">video demonstration</a>)</li>
+<li><a href="./Fall2023/ds2392_kx74_ac2839/Air_Drum.html">Air Drums</a> (<a href="https://www.youtube.com/watch?v=xIBEqJ-K0t0">video demonstration</a>)</li>
+<li><a href="./Fall2023/gyc22_sl2383/Final%20Report.html">Who needs a multimeter??</a> (<a href="https://www.youtube.com/watch?v=Qn_pjeTGFGs">video demonstration</a>)</li>
 </ul>
 
 </div>
