--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13120,6 +13120,8 @@ div#notebook {
 <li><a href="./Fall2023/dms489_kw462/FinalProjectAtarisPongReimagined.html">ATARI's Pong Reimagined</a> (<a href="https://www.youtube.com/watch?v=Qivx0E62YHA">video demonstration</a>)</li>
 <li><a href="./Fall2023/ds2392_kx74_ac2839/Air_Drum.html">Air Drums</a> (<a href="https://www.youtube.com/watch?v=xIBEqJ-K0t0">video demonstration</a>)</li>
 <li><a href="./Fall2023/gyc22_sl2383/Final%20Report.html">Who needs a multimeter??</a> (<a href="https://www.youtube.com/watch?v=Qn_pjeTGFGs">video demonstration</a>)</li>
+<li><a href="./Fall2023/hth27-mw756-ppc49/ECE4760FinalReport.html">16-bit color VGA adapter</a> (<a href="https://www.youtube.com/watch?v=SXKC_BMqUDY">video demonstration</a>)</li>
+<li><a href="./Fall2023/ir93_rak277/index.html">Computron: The parallel computer of the future (Mandelbrot accelerator)</a> (<a href="https://www.youtube.com/watch?v=bqD5AeVnZqc">video demonstration</a>)</li>
 </ul>
 
 </div>
