--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13128,6 +13128,8 @@ div#notebook {
 <li><a href="./Fall2023/nrn25_ayc62_wty5/index.html">Diffusion-Limited Aggregation animator</a> (<a href="https://www.youtube.com/watch?v=Pt3g8yomqu4">video demonstration</a>)</li>
 <li><a href="./Fall2023/sc2484_ges248/index.html">Wii-like game remote</a> (<a href="https://www.youtube.com/watch?v=2XO9b2mAFro">video demonstration</a>)</li>
 <li><a href="./Fall2023/smy48_sal267/overview.html">Gesture-controlled kitchen utensil carosel</a> (<a href="https://www.youtube.com/watch?v=R124vMJPJh4">video demonstration</a>)</li>
+<li><a href="./Fall2023/sq86_dcm288_yk536/index.html">Driving simulator game</a> (<a href="https://www.youtube.com/watch?v=KZARjkXnaB0">video demonstration</a>)</li>
+<li><a href="./Fall2023/tjf87_ss2723/index.html">Space Invaders with a proximity sensor</a> (<a href="https://www.youtube.com/watch?v=g0m5_1Oc-8U">video demonstration</a>)</li>
 </ul>
 
 </div>
