--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13130,6 +13130,9 @@ div#notebook {
 <li><a href="./Fall2023/smy48_sal267/overview.html">Gesture-controlled kitchen utensil carosel</a> (<a href="https://www.youtube.com/watch?v=R124vMJPJh4">video demonstration</a>)</li>
 <li><a href="./Fall2023/sq86_dcm288_yk536/index.html">Driving simulator game</a> (<a href="https://www.youtube.com/watch?v=KZARjkXnaB0">video demonstration</a>)</li>
 <li><a href="./Fall2023/tjf87_ss2723/index.html">Space Invaders with a proximity sensor</a> (<a href="https://www.youtube.com/watch?v=g0m5_1Oc-8U">video demonstration</a>)</li>
+<li>Keyboard to gamepad converter (kept private for patent considerations)</li>
+<li><a href="./Fall2023/av522_dy245/index.html">3D rendered maze game</a> (<a href="https://www.youtube.com/watch?v=zHJQyooM-Sg">video demonstration</a>)</li>
+<li><a href="./Fall2023/cmm478_ses398/ECE4760FinalReport.html">Digital speech vocoder</a> (<a href="https://www.youtube.com/watch?v=0sKSP2oscaU">video demonstration</a>)</li>
 </ul>
 
 </div>
