--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13135,6 +13135,8 @@ div#notebook {
 <li><a href="./Fall2023/cmm478_ses398/ECE4760FinalReport.html">Digital speech vocoder</a> (<a href="https://www.youtube.com/watch?v=0sKSP2oscaU">video demonstration</a>)</li>
 <li><a href="./Fall2023/el549_bl478_ayl48/index.html">Theremin with 3D image</a> (<a href="https://www.youtube.com/watch?v=Qy2WE9b66us">video demonstration</a>)</li>
 <li><a href="./Fall2023/elg227_fad28/FinalReport.html">ChatGPT Pico melodies</a> (<a href="https://www.youtube.com/watch?v=t5btpOsuL5g">video demonstration</a>)</li>
+<li><a href="./Fall2023/gat73_jrs632/finalReportECE4760.html">Tennis for Two (a video game played on an oscilloscope)</a> (<a href="https://www.youtube.com/watch?v=S_E47ijH6YQ">video demonstration</a>)</li>
+<li><a href="./Fall2023/gb438_dy297_zr86/ece5730_quadcopter.html">PID control of a 1D quadcopter</a> (<a href="https://www.youtube.com/watch?v=G1P6WMoC3Is">video demonstration</a>)</li>
 </ul>
 
 </div>
