--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13137,6 +13137,8 @@ div#notebook {
 <li><a href="./Fall2023/elg227_fad28/FinalReport.html">ChatGPT Pico melodies</a> (<a href="https://www.youtube.com/watch?v=t5btpOsuL5g">video demonstration</a>)</li>
 <li><a href="./Fall2023/gat73_jrs632/finalReportECE4760.html">Tennis for Two (a video game played on an oscilloscope)</a> (<a href="https://www.youtube.com/watch?v=S_E47ijH6YQ">video demonstration</a>)</li>
 <li><a href="./Fall2023/gb438_dy297_zr86/ece5730_quadcopter.html">PID control of a 1D quadcopter</a> (<a href="https://www.youtube.com/watch?v=G1P6WMoC3Is">video demonstration</a>)</li>
+<li><a href="./Fall2023/kd496-ma2339-dt538/DrawingBot.html">Drawing robot</a> (<a href="https://www.youtube.com/watch?v=rysG9HqorZY">video description</a>)</li>
+<li><a href="./Fall2023/kmz25_see62/kmz25_see62.html">Christmas caroling muscle machine</a> (<a href="https://www.youtube.com/watch?v=M_8KR_ICSG0">video description</a>)</li>
 </ul>
 
 </div>
